<?xml version="1.0"?>
<package>
  <name>keyboard_to_joy</name>
  <version>0.0.1</version>
  <description>Map keyboard keys to joystick buttons.</description>
  
  <author email="zhi.yan@utbm.fr">Zhi Yan</author>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
